crates/voice-derive/tests/compile_fail/gap_in_order.stderr
error: patch_param order 1 is missing — orders must be contiguous 0..2
 --> tests/compile_fail/gap_in_order.rs:3:10
  |
3 | #[derive(PatchGenerate)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `PatchGenerate` (in Nightly builds, run with -Z macro-backtrace for more info)
